endpoint skeletons completed
